[package]
name = "bevy-mp-experiments"
description = "A collection of experiments for bevy multiplayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://www.github.com/b-n/bevy-mp-experiments"
keywords = ["bevy", "multiplayer", "networking", "game", "experiment"]
categories = ["game-development", "networking"]

[dependencies.bevy]
version ="0.15.3"
default-features = false
features = [
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_render",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "sysinfo_plugin",
  "x11",
]

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
